footer overflow fixes

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,7 @@
+footer {
+  overflow: hidden; // FIXME:
+}
+
 .main-footer {
   color: $footer-font-color;
   background: $footer-background-color;
